[workspace]
members = ["api", "db", "data-fetch", "render", "create-cache"]
resolver = "2"

[workspace.dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.32.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
