[package]
name = "create-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
api = { path = "../api" }
serde_json = { workspace = true }
db = { path = "../db" }
tokio = { workspace = true }
