[package]
name = "data-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
db = { path = "../db" }
lambda_runtime = { version = "0.8.1", default-features = false }
dotenvy = { workspace = true }
reqwest = { version = "0.11.20", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { workspace = true }
serde-aux = { version = "4.2.0", default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { version = "0.3.28", default-features = false }
