[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "json",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
] }
serde = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
